@@ -10,7 +10,6 @@ import uk.gov.hmcts.reform.civil.stateflow.StateFlow;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Map.entry;
@@ -20,6 +19,7 @@ import static uk.gov.hmcts.reform.civil.callback.CaseEvent.FEE_PAYMENT_OUTCOME;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NO_REMISSION_HWF;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.SETTLE_CLAIM;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.SETTLE_CLAIM_MARK_PAID_FULL;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.DISCONTINUE_CLAIM_CLAIMANT;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.UpdateNextHearingInfo;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.PARTIAL_REMISSION_HWF_GRANTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.UPDATE_NEXT_HEARING_DETAILS;
@@ -95,8 +95,6 @@ import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESET_PIN;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESUBMIT_CLAIM;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.SERVICE_REQUEST_RECEIVED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.SET_ASIDE_JUDGMENT;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.SETTLE_CLAIM;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.SETTLE_CLAIM_MARK_PAID_FULL;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.STANDARD_DIRECTION_ORDER_DJ;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.TAKE_CASE_OFFLINE;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.TRANSFER_ONLINE_CASE;
@@ -210,7 +208,8 @@ public class FlowStateAllowedEventService {
                 JUDGMENT_PAID_IN_FULL,
                 SET_ASIDE_JUDGMENT,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -233,7 +232,8 @@ public class FlowStateAllowedEventService {
                 JUDGMENT_PAID_IN_FULL,
                 SET_ASIDE_JUDGMENT,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -255,7 +255,8 @@ public class FlowStateAllowedEventService {
                     JUDGMENT_PAID_IN_FULL,
                     SET_ASIDE_JUDGMENT,
                     SETTLE_CLAIM,
-                    SETTLE_CLAIM_MARK_PAID_FULL
+                    SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -289,6 +290,7 @@ public class FlowStateAllowedEventService {
                 INVALID_HWF_REFERENCE,
                 SETTLE_CLAIM,
                 SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT,
                 RECORD_JUDGMENT,
                 EDIT_JUDGMENT,
                 JUDGMENT_PAID_IN_FULL,
@@ -322,7 +324,8 @@ public class FlowStateAllowedEventService {
                 EVIDENCE_UPLOAD_RESPONDENT,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -367,7 +370,8 @@ public class FlowStateAllowedEventService {
                 asyncStitchingComplete,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -401,7 +405,8 @@ public class FlowStateAllowedEventService {
                 TRANSFER_ONLINE_CASE,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -435,7 +440,8 @@ public class FlowStateAllowedEventService {
                 TRANSFER_ONLINE_CASE,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -478,7 +484,8 @@ public class FlowStateAllowedEventService {
                 BUNDLE_CREATION_NOTIFICATION,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -505,7 +512,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -532,7 +540,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -559,7 +568,8 @@ public class FlowStateAllowedEventService {
                 CLAIMANT_RESPONSE_CUI,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -583,7 +593,8 @@ public class FlowStateAllowedEventService {
                 DEFENDANT_SIGN_SETTLEMENT_AGREEMENT,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -607,7 +618,8 @@ public class FlowStateAllowedEventService {
                 DEFENDANT_SIGN_SETTLEMENT_AGREEMENT,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -629,7 +641,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -686,7 +699,8 @@ public class FlowStateAllowedEventService {
                 EDIT_JUDGMENT,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -708,7 +722,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -725,7 +740,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -742,7 +758,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -774,7 +791,8 @@ public class FlowStateAllowedEventService {
                 CREATE_SDO,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -790,7 +808,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -806,7 +825,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -820,7 +840,8 @@ public class FlowStateAllowedEventService {
                 TRANSFER_ONLINE_CASE,
                 ADD_CASE_NOTE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -909,7 +930,8 @@ public class FlowStateAllowedEventService {
                 INITIATE_GENERAL_APPLICATION,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -949,7 +971,8 @@ public class FlowStateAllowedEventService {
                 INVALID_HWF_REFERENCE,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -997,6 +1020,7 @@ public class FlowStateAllowedEventService {
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
                 SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT,
                 RECORD_JUDGMENT,
                 EDIT_JUDGMENT,
                 JUDGMENT_PAID_IN_FULL,
@@ -1021,6 +1045,7 @@ public class FlowStateAllowedEventService {
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
                 SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT,
                 RECORD_JUDGMENT,
                 EDIT_JUDGMENT,
                 JUDGMENT_PAID_IN_FULL,
@@ -1077,7 +1102,8 @@ public class FlowStateAllowedEventService {
                 JUDGMENT_PAID_IN_FULL,
                 SET_ASIDE_JUDGMENT,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1119,7 +1145,8 @@ public class FlowStateAllowedEventService {
                 asyncStitchingComplete,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1144,7 +1171,8 @@ public class FlowStateAllowedEventService {
                 CHANGE_SOLICITOR_EMAIL,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -1183,7 +1211,8 @@ public class FlowStateAllowedEventService {
                 BUNDLE_CREATION_NOTIFICATION,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -1212,7 +1241,8 @@ public class FlowStateAllowedEventService {
                 CLAIMANT_RESPONSE_CUI,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -1241,7 +1271,8 @@ public class FlowStateAllowedEventService {
                 DEFENDANT_SIGN_SETTLEMENT_AGREEMENT,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -1271,7 +1302,8 @@ public class FlowStateAllowedEventService {
                 DEFENDANT_SIGN_SETTLEMENT_AGREEMENT,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -1302,7 +1334,8 @@ public class FlowStateAllowedEventService {
                 LIP_CLAIM_SETTLED,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1324,7 +1357,8 @@ public class FlowStateAllowedEventService {
             PART_ADMIT_PAY_IMMEDIATELY.fullName(),
             List.of(
                 DEFENDANT_SIGN_SETTLEMENT_AGREEMENT,
-                CLAIMANT_RESPONSE_CUI
+                CLAIMANT_RESPONSE_CUI,
+                LIP_CLAIM_SETTLED
             )
         ),
         entry(
@@ -1400,7 +1434,8 @@ public class FlowStateAllowedEventService {
                 EDIT_JUDGMENT,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
 
@@ -1424,7 +1459,8 @@ public class FlowStateAllowedEventService {
                 LIP_CLAIM_SETTLED,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1449,7 +1485,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1459,7 +1496,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1469,7 +1507,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1505,7 +1544,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1517,7 +1557,8 @@ public class FlowStateAllowedEventService {
                 migrateCase,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1532,7 +1573,8 @@ public class FlowStateAllowedEventService {
                 INITIATE_GENERAL_APPLICATION,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1581,7 +1623,8 @@ public class FlowStateAllowedEventService {
                 INVALID_HWF_REFERENCE,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1624,7 +1667,8 @@ public class FlowStateAllowedEventService {
                 TRANSFER_ONLINE_CASE,
                 COURT_OFFICER_ORDER,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1635,7 +1679,8 @@ public class FlowStateAllowedEventService {
                 LIP_CLAIM_SETTLED,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
 
             )
         ),
@@ -1678,7 +1723,8 @@ public class FlowStateAllowedEventService {
                 COURT_OFFICER_ORDER,
                 ADD_CASE_NOTE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1689,7 +1735,8 @@ public class FlowStateAllowedEventService {
                 CUI_UPLOAD_MEDIATION_DOCUMENTS,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1769,7 +1816,8 @@ public class FlowStateAllowedEventService {
                 REQUEST_JUDGEMENT_ADMISSION_SPEC,
                 TRANSFER_ONLINE_CASE,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1789,7 +1837,8 @@ public class FlowStateAllowedEventService {
                 JUDGMENT_PAID_IN_FULL,
                 SET_ASIDE_JUDGMENT,
                 SETTLE_CLAIM,
-                SETTLE_CLAIM_MARK_PAID_FULL
+                SETTLE_CLAIM_MARK_PAID_FULL,
+                DISCONTINUE_CLAIM_CLAIMANT
             )
         ),
         entry(
@@ -1870,11 +1919,11 @@ public class FlowStateAllowedEventService {
             return ALLOWED_EVENTS_ON_FLOW_STATE_SPEC.entrySet().stream()
                 .filter(entry -> entry.getValue().contains(caseEvent))
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
         }
         return ALLOWED_EVENTS_ON_FLOW_STATE.entrySet().stream()
             .filter(entry -> entry.getValue().contains(caseEvent))
             .map(Map.Entry::getKey)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
